--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "langgraph",
     "langchain",
+    "langchain-openai>=1.1.3",
+    "langchain-anthropic>=1.3.0",
 ]
