--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "langchain",
     "langchain-openai>=1.1.3",
     "langchain-anthropic>=1.3.0",
+    "python-dotenv>=1.2.1",
 ]
