--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,5 @@ dependencies = [
     "langchain-openai>=1.1.3",
     "langchain-anthropic>=1.3.0",
     "python-dotenv>=1.2.1",
+    "aiohttp>=3.13.2",
 ]
