--- a/config/agents.yaml
+++ b/config/agents.yaml
@@ -2,9 +2,14 @@
 defaults:
   provider: "deepseek"
   model: "deepseek-chat"
+  #provider: "openrouter"
+  #model:"amazon/nova-2-lite-v1:free"
 
 # Provider definitions
 providers:
+  openrouter:
+    base_url: "https://openrouter.ai/api/"
+    api_key_env: "OPENROUTER_API_KEY"
   deepseek:
     base_url: "https://api.deepseek.com"
     api_key_env: "DEEPSEEK_API_KEY"
